fixed z-index issue; more work could be done to organize the z-index values

--- a/src/index.css
+++ b/src/index.css
@@ -80,8 +80,8 @@ body {
   left: 0;
   height: 100%;
   width: 100%;
+  z-index: -1;
   /*background-color: red;*/
-  z-index: 10000;
 }
 .drawer-wrapper {
   width: 100%;
